[package]
name = "share-clip"
version = "0.3.5"
authors = ["morning"]
edition = "2018"
description = "Multi-device clipboard sharing."
homepage = "https://github.com/cc-morning/share-clip"
repository = "https://github.com/cc-morning/share-clip"

[dependencies]
arboard = { git = "https://github.com/cc-morning/arboard.git", default-features = false, features = [ "image-data", "wayland-data-control" ] }
bincode = { version = "1", default-features = false }
blake3 = { version = "1", default-features = false }
clap = { version = "3", default-features = false, features = [ "std", "derive" ] }
clipboard-master = { version = "3", default-features = false }
crypto_box = { version = "0.7", default-features = false, features = [ "alloc", "u64_backend" ] }
deadpool-redis = { version = "0.10", default-features = false, features = [ "rt_tokio_1" ] }
notify-rust = { version = "4", default-features = false, features = [ "z" ] }
minivec =  { version = "0.4", default-features = false, features = [ "serde" ] }
rand = { version = "0.8", default-features = false, features = [ "std" ] }
redis = { version = "0.21", default-features = false, features = [ "tokio-comp" ] }
serde = { version = "1", default-features = false, features = [ "derive" ] }
smallvec = { version = "1", default-features = false, features = [ "serde" ] }
tokio = { version = "1", default-features = false, features = [ "macros", "rt-multi-thread", "fs", "sync", "time", "signal" ] }
tokio-stream = { version = "0.1", default-features = false, features = [ "time" ]  }

[target.'cfg(target_os = "linux")'.dependencies]
snmalloc-rs = { version = "0.2", default-features = false, features = [ "1mib", "native-cpu", "build_cc", "usecxx20" ] }

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
mimalloc = { version = "0.1", default-features = false }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
