[package]
name = "share-clip"
version = "0.3.7"
authors = ["morning"]
edition = "2018"
description = "Multi-device clipboard sharing."
homepage = "https://github.com/cc-morning/share-clip"
repository = "https://github.com/cc-morning/share-clip"

[dependencies]
arboard = { version = "2", features = [ "image-data", "wayland-data-control" ], default-features = false }
bincode = { version = "1", default-features = false }
blake3 = { version = "1", default-features = false }
clap = { version = "3", features = [ "std", "derive" ], default-features = false }
clipboard-master = { version = "3", default-features = false }
crypto_box = { version = "0.7", features = [ "alloc", "u64_backend" ], default-features = false }
env_logger = { version = "0.9", features = [ "humantime" ], default-features = false }
deadpool-redis = { version = "0.10", features = [ "rt_tokio_1" ], default-features = false }
flume = { version = "0.10", features = [ "async" ], default-features = false }
log = { version = "0.4", default-features = false }
notify-rust = { version = "4", features = [ "z" ], default-features = false }
mimalloc = { version = "0.1", default-features = false }
rand = { version = "0.8", features = [ "std" ], default-features = false }
redis = { version = "0.21", features = [ "tokio-comp" ], default-features = false }
serde = { version = "1", features = [ "derive" ], default-features = false }
tokio = { version = "1", features = [ "macros", "rt-multi-thread", "fs", "sync", "time", "signal" ], default-features = false }
tokio-stream = { version = "0.1", features = [ "time" ], default-features = false  }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
